--- a/content/kubernetes/05-组件安装.md
+++ b/content/kubernetes/05-组件安装.md
@@ -6,8 +6,9 @@ weight: 5
 
 # Kubernetes-Dashboard
 官网下载的yaml，rbac 没有权限访问，需要将 role改为 clusterrole
+[kubernetes-dashboard.yaml](https://github.com/chase-cheng/resource/blob/master/yamls/kubernetes-dashboard.yaml)
 ```
-kubectl create -f kubernetes-dashboard.yaml
+kubectl create -f https://github.com/chase-cheng/resource/blob/master/yamls/kubernetes-dashboard.yaml
 ```
 获取刚刚创建的 kubernetes-dashboard-token
 ```
@@ -15,7 +16,8 @@ kubectl describe -n kube-system secret/`kubectl -n kube-system get secret | grep
 ```
 
 # Prometheus
-需要创建 ClusterRole, ServiceAccount, ClusterRoleBinding,ConfigMap,Deployment,Service
+需要创建 ClusterRole, ServiceAccount, ClusterRoleBinding,ConfigMap,Deployment,Service   
+[prometheus.yaml](https://github.com/chase-cheng/resource/blob/master/yamls/prometheus.yaml)
 ```
-kubectl create -f prometheus.yaml
+kubectl create -f https://github.com/chase-cheng/resource/blob/master/yamls/prometheus.yaml
 ```
