change yaml source

--- a/content/kubernetes/01-配置代理.md
+++ b/content/kubernetes/01-配置代理.md
@@ -3,11 +3,12 @@ title: "01-配置代理"
 date: 2018-12-10T10:37:23+08:00
 weight: 1 
 ---
-# shadowsocks 科学上网
+
+## shadowsocks 科学上网
 参考文档: https://www.zfl9.com/ss-local.html
 
-# ssserver
-## 安装
+## ssserver
+### 安装
 ```
 # CentOS/RHEL
 yum -y install epel-release
@@ -15,7 +16,7 @@ yum -y install python-pip
 pip install shadowsocks
 ```
     
-## 配置
+### 配置
 ```
 echo "{
     "server": "1.2.3.4",
@@ -44,8 +45,8 @@ ssserver -c /etc/shadowsocks.json -d start
 }
 ```
 
-# sslocal
-## 安装
+## sslocal
+### 安装
 ```
 # CentOS/RHEL
 yum -y install epel-release
@@ -53,7 +54,7 @@ yum -y install python-pip
 pip install shadowsocks
 ```
 
-## 配置
+### 配置
 ```
 echo "{
     "server": "1.2.3.4",
@@ -70,13 +71,13 @@ sslocal -c /etc/shadowsocks.json -d start
 # 日志默认地址 /var/log/shadowsocks.log
 ```
 
-## privoxy
+### privoxy
 ```
 # CentOS/RHEL
 yum -y install privoxy
 ```
 
-## gfwlist
+### gfwlist
 ```
 # 关于 gfwlist2privoxy 脚本
 # 脚本依赖 base64、curl(支持 https)、perl5 v5.10.0+
@@ -102,7 +103,7 @@ systemctl -l status privoxy.service
 
 ```
 
-## 环境变量
+### 环境变量
 ```
 # Initialization script for bash and sh
 # export proxy for GFW
