--- a/content/kubernetes/05-组件安装.md
+++ b/content/kubernetes/05-组件安装.md
@@ -4,20 +4,20 @@ date: 2018-12-10T10:37:23+08:00
 weight: 5
 ---
 
-# Kubernetes-Dashboard
-官网下载的yaml，rbac 没有权限访问，需要将 role改为 clusterrole
-[kubernetes-dashboard.yaml](https://github.com/chase-cheng/resource/blob/master/yamls/kubernetes-dashboard.yaml)
+## Kubernetes-Dashboard
+官网下载的yaml，rbac 没有权限访问，需要将 role改为 clusterrole    
+[kubernetes-dashboard.yaml](https://raw.github.com/chase-cheng/resource/master/yamls/kubernetes-dashboard.yaml)
 ```
-kubectl create -f https://github.com/chase-cheng/resource/blob/master/yamls/kubernetes-dashboard.yaml
+kubectl create -f https://raw.github.com/chase-cheng/resource/master/yamls/kubernetes-dashboard.yaml
 ```
 获取刚刚创建的 kubernetes-dashboard-token
 ```
 kubectl describe -n kube-system secret/`kubectl -n kube-system get secret | grep kubernetes-dashboard-admin-token | awk '{print $1}'`
 ```
 
-# Prometheus
+## Prometheus
 需要创建 ClusterRole, ServiceAccount, ClusterRoleBinding,ConfigMap,Deployment,Service   
-[prometheus.yaml](https://github.com/chase-cheng/resource/blob/master/yamls/prometheus.yaml)
+[prometheus.yaml](https://raw.github.com/chase-cheng/resource/master/yamls/prometheus.yaml)
 ```
-kubectl create -f https://github.com/chase-cheng/resource/blob/master/yamls/prometheus.yaml
+kubectl create -f https://raw.github.com/chase-cheng/resource/master/yamls/prometheus.yaml
 ```
