--- a/content/kubernetes/01-配置代理.md
+++ b/content/kubernetes/01-配置代理.md
@@ -18,16 +18,15 @@ pip install shadowsocks
     
 ### 配置
 ```
-echo "{
-    "server": "1.2.3.4",
-    "server_port": 8989,
+{
+    "server": "0.0.0.0",
+    "server_port": 8888,
     "method": "aes-128-cfb",
     "password": "123456",
-    "local_address": "127.0.0.1",
-    "local_port": 1080,
     "fast_open": true,
-    "workers": 1
-}" > /etc/shadowsocks.json
+    "workers": 3
+}
+ /etc/shadowsocks.json
 
 ssserver -c /etc/shadowsocks.json -d start
 # 日志默认地址 /var/log/shadowsocks.log
@@ -52,23 +51,6 @@ ssserver -c /etc/shadowsocks.json -d start
 yum -y install epel-release
 yum -y install python-pip
 pip install shadowsocks
-```
-
-### 配置
-```
-echo "{
-    "server": "1.2.3.4",
-    "server_port": 8989,
-    "method": "aes-128-cfb",
-    "password": "123456",
-    "local_address": "127.0.0.1",
-    "local_port": 1080,
-    "fast_open": true,
-    "workers": 1
-}" > /etc/shadowsocks.conf
-
-sslocal -c /etc/shadowsocks.json -d start
-# 日志默认地址 /var/log/shadowsocks.log
 ```
 
 ### privoxy
